# AuthNinja

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cpp-ci.yml
